--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,14 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="@dimen/default_vertical_margin"
     tools:context=".fragment.DetailsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ImageView
+        android:id="@+id/img_profile_details"
+        android:layout_width="80dp"
+        android:layout_height="100dp"
+        android:src="@drawable/profile_placeholder"
+        app:layout_constraintStart_toStartOf="parent"
+        android:adjustViewBounds="true"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/txt_user_name_details"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:fontFamily="sans-serif-black"
+        android:gravity="center"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/txt_created_At"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/img_profile_details"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:text="User name" />
+
+    <TextView
+        android:id="@+id/txt_created_At"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="4dp"
+        android:gravity="center"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/txt_updated_At"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/img_profile_details"
+        app:layout_constraintTop_toBottomOf="@id/txt_user_name_details"
+        tools:text="Created At" />
+
+    <TextView
+        android:id="@+id/txt_updated_At"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="4dp"
+        android:gravity="center"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/img_profile_details"
+        app:layout_constraintTop_toBottomOf="@id/txt_created_At"
+        tools:text="Updated At" />
+
+    <TextView
+        android:id="@+id/txt_login"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:gravity="center"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom_profile"
+        app:layout_constraintEnd_toStartOf="@+id/img_circle"
+        app:layout_constraintStart_toEndOf="@+id/img_profile_details"
+        app:layout_constraintTop_toTopOf="@+id/img_circle"
+        tools:text="Login" />
+
+    <ImageView
+        android:id="@+id/img_circle"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/red_circle"
+        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom_profile"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_bottom_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@+id/img_profile_details" />
+
+    <TextView
+        android:id="@+id/txt_owner_url"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:gravity="center"
+        android:textSize="12sp"
+        app:layout_constraintTop_toBottomOf="@+id/img_profile_details"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="URL" />
+
+    <TextView
+        android:id="@+id/txt_full_description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/default_vertical_margin"
+        android:gravity="center"
+        android:textSize="12sp"
+        app:layout_constraintTop_toBottomOf="@+id/txt_owner_url"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="Description" />
+</androidx.constraintlayout.widget.ConstraintLayout>
