--- a/app/src/main/res/layout/activity_p_o_c.xml
+++ b/app/src/main/res/layout/activity_p_o_c.xml
@@ -20,4 +20,16 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Waiting..." />
 
+    <TextView
+        android:id="@+id/txt_coroutine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="Waiting ..."
+        android:textSize="28sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/poc_text"
+        tools:text="Coroutine..." />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
