--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -3,11 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_items"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".activity.MainActivity" />
+        android:layout_height="wrap_content" />
 
     <ProgressBar
         android:layout_gravity="center"
@@ -16,4 +15,5 @@
         android:indeterminate="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
 </FrameLayout>
